# clickhouse-monitoring

./: .dependency-cruiser.cjs  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  TESTING.md  docker-compose.yml  index.yaml  package.json  pnpm-lock.yaml  release-notes.md
.claude/: launch.json
.commandcode/taste/: taste.md
.deepsec/: pnpm-lock.yaml
.github/: .release-please-manifest.json  release-please-config.json
.github/workflows/: a11y.yml  base.yml  blog.yml  bundle-size.yml  cargo-publish.yml  ci.yml  cli-rust-release.yml  cloudflare.yml  docs.yml  labeler.yml  landing.yml  pr-title.yml  release.yml  test.yml
apps/blog/: CONTENT-CALENDAR.md  README.md  package.json  wrangler.toml
apps/bug-handler/: deploy.config.ts
apps/cloud-hooks/: .gitignore  deploy.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  wrangler.toml
apps/dashboard/: .env.example  .env.preview  .env.production  CLAUDE.md  components.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json  vite.config.ts  wrangler.toml
apps/docs/: package.json  source.config.ts  wrangler.toml
apps/landing/: astro.config.mjs  node_modules  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
apps/mcp/: tsconfig.json  wrangler.toml
apps/telemetry/: README.md  index.html  package.json  tsconfig.json  wrangler.toml
assets/: README.md
assets/illustrations/: README.md
deploy/kubernetes/: README.md
docs/knowledge/: README.md  ai-insights.md  (+13 more)
plans/: 103-cloud-hooks-worker.md  25-email-alert-adapter.md  50-capacity-forecast-ttl-advisor.md  51-agent-eval-golden-tests.md  55-self-hosted-local-config-override.md  56-dashboard-d1-persistence-sharing.md  62-product-analytics-funnel.md  66-onboarding-sample-cluster-preset.md  69-og-images-seo-meta-audit.md  README.md
rust/ch-monitor-cli/: CHANGELOG.md  Cargo.toml  README.md
rust/ch-monitor-cli/src/: diagnose.rs  main.rs  telemetry.rs
scripts/: build-skills-registry.ts  deploy-worker.test.ts  deploy-worker.ts  install.sh  migrate-ae-to-d1.ts  peerdb-mock-server.ts  sync-shared-assets.mjs
(+1322 files in other folders)
