[package]
name = "ch-monitor-cli"
version = "0.1.0"
edition = "2021"
authors = ["duyet <bot@duyet.net>"]
description = "Standalone terminal/TUI CLI for chmonitor, plus a zero-signup `chm diagnose` health scan that connects straight to ClickHouse."
license = "MIT"
repository = "https://github.com/chmonitor/chmonitor"
readme = "README.md"
keywords = ["clickhouse", "cli", "monitoring", "diagnostics"]
categories = ["command-line-utilities"]
exclude = ["/.github"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "1.0"
dirs = "6"
ratatui = "0.30"
crossterm = "0.28"
